--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@schedule-x/vue",
+  "name": "@holitime/schedule-x-customized-vue",
   "version": "1.25.0",
   "main": "./dist/schedule-x-vue.umd.js",
   "module": "./dist/schedule-x-vue.mjs",
@@ -32,7 +32,7 @@
     "@schedule-x/eslint-config": "^1.22.0",
     "@schedule-x/event-modal": "^1.22.0",
     "@schedule-x/prettier-config": "^1.22.0",
-    "@schedule-x/theme-default": "^1.22.0",
+    "@schedule-x/theme-default": "^1.28.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
@@ -48,6 +48,8 @@
     "semantic-release": "^23.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
-    "vue-tsc": "^2.0.0"
+    "vue-tsc": "^2.0.0",
+    "@schedule-x/calendar": "^1.28.0",
+    "@schedule-x/scroll-controller": "^1.28.0"
   }
 }
