--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
   "devDependencies": {
     "@fontsource/open-sans": "^5.0.20",
     "@rollup/plugin-typescript": "^11.1.5",
+    "@schedule-x/calendar": "^1.28.0",
     "@schedule-x/drag-and-drop": "^1.35.0",
     "@schedule-x/e2e-testing": "^1.35.0",
     "@schedule-x/eslint-config": "^1.35.0",
     "@schedule-x/event-modal": "^1.35.0",
     "@schedule-x/prettier-config": "^1.35.0",
+    "@schedule-x/scroll-controller": "^1.28.0",
     "@schedule-x/theme-default": "^1.35.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
@@ -48,8 +50,11 @@
     "semantic-release": "^23.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
-    "vue-tsc": "^2.0.0",
-    "@schedule-x/calendar": "^1.28.0",
-    "@schedule-x/scroll-controller": "^1.28.0"
+    "vue-tsc": "^2.0.0"
+  },
+  "dependencies": {
+    "@preact/signals": "^1.2.3",
+    "preact": "^10.20.2",
+    "vue": "^3.4.25"
   }
 }
