--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "@preact/signals": "^1.2.3",
     "preact": "^10.20.2",
-    "vue": "^3.4.25"
+    "vue": "^3.4.25",
+    "@schedule-x/event-recurrence": "^1.34.0"
   }
 }
